--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "login",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
